# Blog-api

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
blogapi/: asgi.py  settings.py  urls.py
laptopsapi/: settings.py  urls.py  wsgi.py
permision/: admin.py  apps.py  models.py  tests.py  urls.py
permision/api/: permissions.py  serializers.py  viewset.py
permision/migrations/: 0001_initial.py
